# aztec-list

./: .env.example  .gitignore  .pre-commit-config.yaml  DOCKER-QUICK-REF.md  DOCKER.md  README.md  aztec_list.db  docker-compose.yml  package-lock.json  pyproject.toml
.pre-commit-hooks/: run-eslint.py  run-prettier.py
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/docs/: middleware.md
backend/migrations/: env.py
backend/migrations/versions/: 4d95f908989a_add_email_verification_fields.py  82d15f82389d_initial_schema.py
backend/src/app/: main.py
backend/src/app/api/v1/: routes.py
backend/src/app/core/: auth.py  dependencies.py  email.py  enums.py  image_processing.py  logging.py  middleware.py  moderation.py  rate_limiter.py  security.py  settings.py  storage.py  websocket.py
backend/src/app/models/: admin.py  conversation.py  listing.py  listing_image.py  message.py  profile.py  support_ticket.py  user.py
backend/src/app/repository/: admin.py  conversation.py  listing.py  listing_image.py  message.py  profile.py  support_ticket.py  user.py
backend/src/app/routes/: admin.py  auth.py  listing_images.py  listings.py  messages.py  profiles.py  support.py  support_tickets.py  test_helpers.py  users.py  websocket_messages.py
backend/src/app/schemas/: admin.py  conversation.py  listing.py  listing_image.py  message.py  profile.py  support_ticket.py  user.py
backend/src/app/services/: admin.py  conversation.py  listing.py  listing_image.py  message.py  moderation.py  profile.py  support_ticket.py  user.py
backend/src/app/templates/emails/: email_verification.html  support_ticket_confirmation.html  support_ticket_notification.html
backend/tests/: README.md  __init__.py  conftest.py  test_admin.py  test_auth.py  test_listing_images.py  test_listings.py  test_messages.py  test_profiles.py  test_route_errors.py  test_support_tickets.py  test_users.py  test_websocket_messages.py
backend/tests/integration/: test_listing_moderation.py
backend/tests/unit/: test_admin_repository.py  test_admin_service.py  test_admin_service_listing_removal.py  test_email_service.py  test_listing_image_repository.py  test_listing_image_service.py  test_listing_repository.py  test_listing_service.py  test_message_schema.py  test_moderation.py  test_profile_repository.py  test_profile_service.py  test_security.py  test_storage.py  test_user_repository.py  test_user_service.py  test_user_service_password.py
docs/: 01-overview.md  02-endpoints.md  03-data-models.md  04-database-schema.md  05-additional-considerations.md  aztec-list-technical-spec.md  backendPlanning.md  dataModels.md  databaseSchema.md  openapi.yaml
frontend/: .env.example  .gitignore  .prettierignore  Dockerfile  README.md  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/playwright-report/: index.html
frontend/src/: test-utils.tsx
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/components/: app-sidebar.tsx  product-detail-01.tsx  site-header.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAuthenticatedFetch.ts  useWebSocket.ts
frontend/src/lib/: api.ts  auth.ts  constants.ts  errorHandling.ts  messaging-api.ts  profile-picture.ts  utils.ts
frontend/src/queryOptions/: createListingDetailQueryOptions.ts  createListingQueryOptions.ts  createMessagingQueryOptions.ts  createOwnListingsQueryOptions.ts  createProfileQueryOptions.ts  createUserListingsQueryOptions.ts  createUserQueryOptions.ts
frontend/src/types/: auth.ts  listingParams.ts  message.ts  user.ts
frontend/src/ui/: card.tsx  grid.tsx  header.tsx  search.tsx
frontend/tests/e2e/: admin-access-control.spec.ts  admin-actions.spec.ts  admin-moderation.spec.ts  auth-login.spec.ts  auth-logout.spec.ts  auth-signup.spec.ts  listings-browse.spec.ts  listings-create.spec.ts  listings-detail.spec.ts  listings-edit-delete.spec.ts  profile-management.spec.ts
src/app/: main.py
src/app/core/: auth.py  database.py  dependencies.py  enums.py  security.py  settings.py
src/app/models/: __init__.py  admin.py  listing.py  listing_image.py  profile.py  user.py
src/app/repository/: admin.py  listing.py  listing_image.py  profile.py  user.py
src/app/routes/: admin.py  auth.py  listing.py  listing_images.py  listings.py  profiles.py  users.py
src/app/schemas/: admin.py  listing.py  listing_image.py  profile.py  user.py
src/app/services/: admin.py  listing.py  listing_images.py  (+2 more)
(+68 files in other folders)
