[project]
name = "aztec-list"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "pwdlib[argon2]>=0.2.1",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.1",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",   # line too long (handled by line-length)
    "COM812", # missing trailing comma (handled by formatter)
    "D203",   # no blank line before class docstrings
    "D212",   # keep summary on first line
    "D413",   # blank line after last docs section
    "D1",     # ignore all "missing docstring" rules
    "TD",     # ignore all TODO rules
    "FIX002", # line contains TODO
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.ruff.lint.isort]
known-first-party = ["src"]
