[project]
name = "aztec-list"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "jinja2>=3.1.6",
    "pillow>=10.0.0",
    "pwdlib[argon2]>=0.2.1",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "resend>=2.19.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.1",
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",   # line too long (handled by line-length)
    "COM812", # missing trailing comma (handled by formatter)
    "D203",   # no blank line before class docstrings
    "D212",   # keep summary on first line
    "D413",   # blank line after last docs section
    "D1",     # ignore all "missing docstring" rules
    "TD",     # ignore all TODO rules
    "FIX002", # line contains TODO
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-v --strict-markers --cov=app --cov-report=term-missing --cov-report=html"
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for workflows",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src/app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
]
